<resources>
    <string name="app_name">Music Collab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_join_room">JoinRoomActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_room">Enter a room number</string>
    <string name="or">Or</string>
    <string name="create_room">Create a room</string>
    <string name="go">go</string>
    <string name="enter_name">Enter your name</string>
    <string name="join">Join</string>
    <string name="room_name">Room: %s</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="couldntJoinRoom">Couldn\'t join the room at this time. Please try again.</string>
    <string name="enter_name_alert">Please enter a name</string>
    <string name="current_videos">current videos</string>
    <string name="room_id">room_id</string>
    <string name="add_video">Add a Video</string>
    <string name="search_video">Search for a video</string>
</resources>
