<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.joeyang.videocollab.Fragments.JoinRoomFragment">
    <LinearLayout
        android:id="@+id/editTextGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:id="@+id/nameEditText"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_room"
            android:id="@+id/enterRoomEditText"
            android:layout_marginBottom="24dp"
            android:color="@color/colorPrimary"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:layout_gravity="center_horizontal"
            android:onClick="joinRoom"
            android:id="@+id/addRoomButton"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="6dp"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_room"
            android:layout_marginTop="0dp"
            android:id="@+id/createRoomButton"
            android:layout_marginBottom="0dp"
            android:onClick="createRoom"/>

    </LinearLayout>



</RelativeLayout>
